--- a/labs/L3LS_EVPN/playbooks/cvp.yml
+++ b/labs/L3LS_EVPN/playbooks/cvp.yml
@@ -9,4 +9,4 @@
       ansible.builtin.import_role:
         name: arista.avd.cv_deploy
       vars:
-        cv_run_change_control: false
+        cv_run_change_control: true
