--- a/labs/L3LS_EVPN/sites/site_2/intended/configs/s2-brdr1.cfg
+++ b/labs/L3LS_EVPN/sites/site_2/intended/configs/s2-brdr1.cfg
@@ -79,6 +79,13 @@ interface Ethernet3
    no switchport
    ip address 172.16.2.19/31
 !
+interface Ethernet4
+   description P2P_s1-brdr1_Ethernet4
+   no shutdown
+   mtu 1500
+   no switchport
+   ip address 172.16.255.1/31
+!
 interface Ethernet6
    description MLAG_s2-brdr2_Ethernet6
    no shutdown
@@ -109,7 +116,7 @@ interface Vlan20
    description Twenty
    no shutdown
    vrf OVERLAY
-   ip address virtual 10.20.20.102/24
+   ip address virtual 10.20.20.1/24
 !
 interface Vlan3009
    description MLAG_L3_VRF_OVERLAY
@@ -217,6 +224,9 @@ router bgp 65203
    neighbor 172.16.2.18 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.16.2.18 remote-as 65200
    neighbor 172.16.2.18 description s2-spine2_Ethernet7
+   neighbor 172.16.255.0 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.16.255.0 remote-as 65103
+   neighbor 172.16.255.0 description s1-brdr1
    redistribute connected route-map RM-CONN-2-BGP
    !
    vlan 10
