--- a/labs/L3LS_EVPN/sites/site_2/intended/structured_configs/s2-brdr1.yml
+++ b/labs/L3LS_EVPN/sites/site_2/intended/structured_configs/s2-brdr1.yml
@@ -56,6 +56,16 @@ ethernet_interfaces:
   peer_type: spine
   switchport:
     enabled: false
+- name: Ethernet4
+  description: P2P_s1-brdr1_Ethernet4
+  shutdown: false
+  mtu: 1500
+  ip_address: 172.16.255.1/31
+  peer: s1-brdr1
+  peer_interface: Ethernet4
+  peer_type: other
+  switchport:
+    enabled: false
 hostname: s2-brdr1
 ip_domain_lookup:
   source_interfaces:
@@ -220,6 +230,11 @@ router_bgp:
     remote_as: '65200'
     peer: s2-spine2
     description: s2-spine2_Loopback0
+  - ip_address: 172.16.255.0
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65103'
+    peer: s1-brdr1
+    description: s1-brdr1
   redistribute:
     connected:
       enabled: true
@@ -308,7 +323,7 @@ vlan_interfaces:
   description: Twenty
   shutdown: false
   vrf: OVERLAY
-  ip_address_virtual: 10.20.20.102/24
+  ip_address_virtual: 10.20.20.1/24
   tenant: S2_FABRIC
 - name: Vlan3009
   description: MLAG_L3_VRF_OVERLAY
